<resources>
    <string name="app_name">Recipe App - Food Hero</string>
    <string name="presented_by">Presented by Daniel Gabrieal Jayarajan</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="select_one_of_these_recipe_types">Select One Of These Recipe Types</string>
    <string name="back">Go back to Homepage</string>
    <string name="see_all_recipes">See All Recipes</string>
    <string name="view_all_recipes">View All Recipes</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="login">Login</string>
    <string name="not_a_member_don_t_worry_sign_up_here">Not a member? Don\'t worry! Sign up here</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="already_a_member">Already a member? Sign in right here</string>
</resources>