<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/ivHomeScreen"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/applogo" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_light"
            android:lineSpacingExtra="4sp"
            android:text="@string/login_to_continue"
            android:textColor="@color/text_black"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/enter_your_email"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_mail_outline_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tilLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/enter_your_password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_baseline_key_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tilLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="24dp"
            android:background="@color/purple_200"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:lineSpacingExtra="4sp"
            android:text="@string/not_a_member_don_t_worry_sign_up_here"
            android:textColor="@color/teal_700"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            app:drawableTint="@color/teal_700" />

    </LinearLayout>
</layout>